--- a/Week_1/HW/README
+++ b/Week_1/HW/README
@@ -4,7 +4,7 @@
  - 作業二： 九九乘法表 ||task2: 9x9 multiplication table
       - W1_HW_basic_task2.R
  - 作業三： 數字產生器||task3: number generator
- 
+      - W1_HW_basic_task3.R 
  - 作業四： 閏年判斷器||task4: leap year judger
  
 # 猜數字||Guess Numbers
