--- a/Week_1/HW/README
+++ b/Week_1/HW/README
@@ -6,5 +6,6 @@
  - 作業三： 數字產生器||task3: number generator
       - W1_HW_basic_task3.R 
  - 作業四： 閏年判斷器||task4: leap year judger
- 
+       - W1_HW_basic_task3.R 
+
 # 猜數字||Guess Numbers
