--- a/Week_1/HW/README
+++ b/Week_1/HW/README
@@ -1,11 +1,7 @@
-# 基礎習題||Basic tasks
- - 作業一： iris 資料庫||task1: iris
+# Basic
       - W1_HW_basic_task1.R
- - 作業二： 九九乘法表 ||task2: 9x9 multiplication table
       - W1_HW_basic_task2.R
- - 作業三： 數字產生器||task3: number generator
       - W1_HW_basic_task3.R 
- - 作業四： 閏年判斷器||task4: leap year judger
-       - W1_HW_basic_task3.R 
+      - W1_HW_basic_task3.R 
 
 # 猜數字||Guess Numbers
