--- a/Week_3/hw_3/VisualizeData_GooglePlaystore.Rmd
+++ b/Week_3/hw_3/VisualizeData_GooglePlaystore.Rmd
@@ -20,7 +20,7 @@ mydata = read.csv("googleplaystore.csv")
 
 ## Analyze
 
-```{r analyze,echo=FALSE}
+```{r analyze}
   #評分分布
 my.plot3 <- ggplot(mydata, aes(x = Rating))
 my.plot3 <- my.plot3 +
