--- a/Week_4/hw_4/Wordcloud/Wordcloud_Tweet_Undertale.Rmd
+++ b/Week_4/hw_4/Wordcloud/Wordcloud_Tweet_Undertale.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Wordcloud_Tweet#Undertale"
 author: "Perilium"
-date: "2018?????10????4??????"
+date: "2018/10/4"
 output: html_document
 ---
 
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## Libraries
-?f????d???????????????????????
+Import needed libraries
 ```{r library}
 library("wordcloud")#??????ھӪT?h?aΤ?????n??ϧ[??????
 library("RColorBrewer")#????h?aΤ??????d
@@ -21,15 +21,14 @@ library(rtweet)
 ```
 
 ## Twitter API
-  ?????????????????????????????~???롤V???????w??????????f?šN?????˯?
-  ?w??^???????y???????????:
-`create_token(
-   app = "Myappname",
-   consumer_key = "My consumer_key",
-   consumer_secret = "My comsumer_secret",
-   access_token = "My access_token",
-  access_secret = "My access_secret",
-  )`
+  Code hide for privacy and security.Example code below:  
+create_token(  
+   app = "Myappname",  
+   consumer_key = "My consumer_key",  
+   consumer_secret = "My comsumer_secret",  
+   access_token = "My access_token",  
+  access_secret = "My access_secret",  
+)  
 ```{r API, include=FALSE}
 create_token(
   app = "CSX4001",
@@ -40,7 +39,7 @@ create_token(
 )
 ```
 
-## ?k???ӹn????
+## Tweet collect and produce wordcloud
   
 ```{r main}
 #Grab tweets
