--- a/Week_4/hw_4/Wordcloud/Wordcloud_Tweet_Undertale.Rmd
+++ b/Week_4/hw_4/Wordcloud/Wordcloud_Tweet_Undertale.Rmd
@@ -12,8 +12,8 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Libraries
 Import needed libraries
 ```{r library}
-library("wordcloud")#??????ھӪT?h?aΤ?????n??ϧ[??????
-library("RColorBrewer")#????h?aΤ??????d
+library("wordcloud")?
+library("RColorBrewer")
 library(tidytext)
 library(dplyr)
 library(stringr)
