Then the unsatisfied work

--- a/Week_4/hw_4/map/Hsinchu_7-11.Rmd
+++ b/Week_4/hw_4/map/Hsinchu_7-11.Rmd
@@ -10,7 +10,6 @@ knitr::opts_chunk$set(echo = TRUE)
 ## 載入資料庫
 ```{r inside}
 library(leaflet)
-library(htmltools)
 ```
 
 ## 載入地圖、座標，標上地圖點
@@ -21,9 +20,9 @@ library(htmltools)
 ```{r map}
 dat <- read.csv("https://perilium.github.io/NTU-CSX4001/Week_4/hw_4/map/7-11raw.csv")
 for(i in c(1:134)){
-  dat$content[i] <- paste(sep=":",dat$Name[i],dat$Tel[i])
+  dat$content[i] <- paste("門市:",dat$Name[i],"  電話:",dat$Tel[i])
 
 }
-  leaflet(data = dat[1:134,]) %>% addTiles() %>%
-  addMarkers(~Lon,~Lat, popup = ~content)
+leaflet(data = dat[1:134,]) %>% addTiles() %>%
+  addMarkers(~Lon,~Lat, popup = ~Tel)
 ```
