text change & run

--- a/Week_12/path/news.txt
+++ b/Week_12/path/news.txt
@@ -1,38 +1,44 @@
-Hong Kong (CNN)The major defeat for Taiwan's ruling Democratic Progressive Party (DPP) in Saturday's local elections has profound consequences for regional stability and great power politics.
+Voters in Taiwan have rejected same-sex marriage in a referendum, a setback to LGBT couples hoping their island will be the first country in Asia to let same-sex couples share child custody and insurance benefits.
 
-It makes victory by the Kuomintang (KMT), the former ruling party that preaches friendly relations with Beijing, highly likely in the 2020 presidential election.
-This prospect will have major implications for both cross-strait and Sino-US relations.
-Before Saturday's election, the DPP controlled 13 out Taiwan's 22 cities and counties. Now, it is left with only six. More importantly, the DPP lost in both Kaohsiung and Taichung, the second and third largest cities of Taiwan.
-Zhang Baohui
-Zhang Baohui
-The defeat in Kaohsiung is particularly traumatizing for many DPP supporters, as it has been a DPP stronghold for over two decades. Indeed, the main support base for the DPP traditionally lies in southern Taiwan. Due to magnitude of the defeat, President Tsai Ing-wen resigned as chairwoman of the DPP.
-The DPP defeat reveals widespread dissatisfaction with the ruling party, and a major cause of that discontent is renewed instability in the Taiwan Strait.
-Since Taiwan became a democracy in the early 1990s, cross-strait relations have become increasingly conflictual due to Taiwan's increasing assertion of its own identity, which is at odds with China's long-standing principle that there is only one China and Taiwan is part of China.
-In 1992, officials from the two sides met in Singapore and agreed to use a vaguely defined "One China" principle to form the basis of their bilateral relations. This was the so-called "1992 Consensus". As long as Taipei pays formal respect to the principle, Beijing can allow peaceful relations across the Taiwan Strait.
-However, in 2000 DPP candidate Chen Shui-bian became president of Taiwan and he began to push for revisionist policies that sought to move the island toward greater de jure independence.
-Taiwan President resigns as head of party after losses in local elections
-Taiwan President resigns as head of party after losses in local elections
-The ensuing instability across the Taiwan Strait led to KMT's return to power in 2008. President Ma Ying-jeou not only re-affirmed the "1992 Consensus" but also expanded bilateral dialogues and interactions at political, economic, and societal levels. In October 2015, he and Chinese President Xi Jinping had a historic meeting in Singapore.
-Ma's mainland policy was supported by a clear majority of people in Taiwan, who cherished the peace and prosperity enabled by cooperative relations between the two sides. However, Ma's perceived ineptness on the domestic front weakened popular support for the KMT. So in 2016 the DPP's Tsai Ing-wen became president after a clear electoral victory. Tsai's victory was partly due to her promise during the election that she would not seek to change the status quo of cross-strait relations.
-After the election, however, Tsai, constrained by the DPP ideology that Taiwan is not part of China, refused to accept the "1992 Consensus" and the underlying "One China" principle. This defiance by the DPP has once again disrupted bilateral relations with Beijing, which has used a variety of measures to undermine her and the DPP.
-Play Video
+The vote on Saturday, organised by Christian groups that make up about 5% of Taiwan¡¦s population and advocates of the traditional Chinese family structure, contradicts a May 2017 constitutional court ruling. Justices told legislators then to make same-sex marriage legal within two years, a first for Asia, where religion and conservative governments normally keep the bans in place.
 
-China 'firmly' opposes Taiwan Travel Act 02:14
-For example, Beijing has vastly reduced the number of Chinese tourists to visit Taiwan and this measure has seriously harmed Taiwan's travel industry. Moreover, China has stepped up military pressure on Taiwan by regularly flying its jet fighters and bombers around the island. The coercive measures have made Taiwan's people uneasy about the island's security.
-The resurfacing of tension and conflicts with Beijing has undermined the legitimacy of Tsai's rule. While the people of Taiwan highly value the island's distinctly separate identity from China, they nonetheless crave stability and peace in the Taiwan Strait. Before the election, public opinion polls regularly showed that Tsai's approval rating hovered below 30%.
-The DPP's resounding defeat on Saturday should at least serve to restrain its revisionist inclination, especially its ideologues' quest for Taiwan's de jure independence. Public opinion is clear on the matter. It is therefore highly likely that the DPP's campaign for the 2020 presidential election will attempt to project a moderate position on the cross-strait issue. However, the question is whether Taiwan's mainstream voters could again trust the DPP on this crucial issue.
+Although the ballot is advisory only, it is expected to frustrate lawmakers mindful of public opinion as they face the court deadline next year. Many legislators will stand for re-election in 2020.
 
-A win for Beijing
-The scale of the DPP's losses has convinced many Taiwan commentators that it will be very difficult for the DPP to win the 2020 presidential election, either with Tsai or another candidate.
-If the KMT once again returns to power, Beijing will reap a big win with clear implications for regional stability. The Taiwan Strait remains one of the most dangerous hotspots in East Asia. Re-stabilized cross-strait relations will no doubt tone down the likelihood of military conflicts, thereby removing a major security challenge for China.
-The prospect of a possible KMT victory in the 2020 presidential election may also motivate Beijing to rekindle its vision for a "peaceful reunification" with Taiwan. For example, during Ma Ying-jeou's reign, Beijing tried to complete a "peace treaty" between the two sides as a first step toward long-term political union.
-A setback for Washington
-The DPP's defeat and a possible bigger defeat in the 2020 presidential election also imply strategic setbacks for the Trump administration, which is pursuing a new China policy.
-While successive US governments since the 1970s have adopted a "One China" policy, the Trump administration has been tightening its diplomatic and security relations with Taiwan.
-While denying any intention to contain China, Washington's new China policy nonetheless seeks to maximize leverages to limit China's power and influences.
-Taiwan voters reject same-sex marriage 
-Taiwan voters reject same-sex marriage
-Taiwan naturally fits well within that. In particular, the DPP's antagonistic stand against China creates the perfect synergy with Washington's China policy.
-The prospect of KMT winning the 2020 election will no doubt undermine Washington's China policy. While various KMT governments in the past had very good relations with the US, the party's traditional approach to cross-strait relations will make it less motivated to work with the US to contain a rising China.
-The DPP's electoral defeat therefore carries far larger consequences that transcend the island itself, including major implications for both China and the United States.
-Their respective strategic interests are deeply embedded with Taiwan's domestic political situations. In that sense, Taiwan is a key battleground for the rising rivalry between the two great powers.
+¡§The legislature has lots of choices on how to make this court order take effect,¡¨ said referendum proponent Chen Ke, a Catholic pastor in Taiwan and an opponent of same-sex marriage.
+
+Ruling party lawmakers backed by president Tsai Ing-wen had proposed legalising same-sex marriage in late 2016, but put aside their ideas to await the court hearing. Opposition to same-sex marriage crested after the court ruling. Opponents have held rallies and mobilised votes online.
+
+Courts will still consider local marriage-licensing offices in violation of the law if they refuse same-sex couples until May 2019, a Ministry of Justice spokesperson said last week.
+
+¡§The referendum is a general survey, it doesn¡¦t have very strong legal implications,¡¨ said Shiau Hong-chi, a professor of gender studies and communications management at Shih-Hsin University in Taiwan. ¡§One way or another it has to go back to the court.¡¨
+
+Voters approved a separate measure on Saturday calling for a ¡§different process¡¨ to protect same-sex unions. It is viewed as an alternative to using the civil code. A third initiative, also approved, asked that schools avoid teaching LGBT ¡§education¡¨.
+
+Amnesty International told the government it needed to ¡§deliver equality and dignity¡¨.
+
+¡§This result is a bitter blow and a step backwards for human rights in Taiwan,¡¨ Amnesty¡¦s Taiwan-based acting director, Annie Huang, said. ¡§However, despite this setback, we remain confident that love and equality will ultimately prevail.¡¨
+
+Taiwanese also elected candidates from the China-friendly opposition Nationalist party to a majority of mayoral and county magistrate posts, reversing the party¡¦s losses in 2014.
+
+Advertisement
+
+China welcomed the defeat of Taiwan¡¦s pro-independence ruling Democratic Progressive party (DPP) at the local elections, saying it showed people wanted peaceful relations with Beijing.
+
+The vote dealt a major blow to President Tsai Ing-wen¡¦s hopes of re-election in 2020, forcing her to quit as DPP leader as the Beijing-friendly main opposition Kuomintang (KMT) made gains in the face of China¡¦s increasing pressure on the island.
+
+
+Uncertainty grips gay people in Taiwan as same-sex marriage goes to the vote
+ Read more
+The DPP has been left in control of only six of Taiwan¡¦s cities and counties, compared with at least 15 for the KMT. The losses included one of its most steadfast strongholds, the southern city of Kaohsiung.
+
+¡§The [election] results reflected the strong will of the Taiwan public in hoping to continue to share the benefits of the peaceful development of relations across the Taiwan Strait, and their strong wish in hoping to improve the island¡¦s economy and people¡¦s wellbeing,¡¨ said a statement by China¡¦s policy-making Taiwan Affairs Office and carried by state media.
+
+Tsai and the DPP have faced a mounting backlash over domestic reforms as well as concerns about deteriorating ties with China, which still sees self-ruling Taiwan as part of its territory to be reunified.
+
+Tsai told reporters that she would take ¡§complete responsibility¡¨ for the defeat as she resigned as chair of the party.
+
+Beijing has intensified pressure on Taiwan under Tsai, upping military drills, poaching diplomatic allies and successfully convincing international businesses to list the island as part of China on their websites.
+
+The DPP is traditionally pro-independence and Tsai has refused to acknowledge Beijing¡¦s stance that Taiwan is part of ¡§one China¡¨, unlike her KMT predecessor, Ma Ying-jeou.
+
+Ahead of the vote, Tsai and DPP officials repeatedly accused China of meddling in the lead-up to the elections by operating a ¡§fake news¡¨ campaign. Beijing has denied the allegations.
